--- a/libraries/datatables/media/css/jquery.dataTables_themeroller.css
+++ b/libraries/datatables/media/css/jquery.dataTables_themeroller.css
@@ -51,7 +51,7 @@ table.dataTable thead th.ui-state-default:last-child {
   border-right-width: 1px;
 }
 table.dataTable tbody tr {
-  background-color: #ffffff;
+  background-color: #8E8A8A;
 }
 table.dataTable tbody tr.selected {
   background-color: #B0BED9;
