--- a/libraries/main/css/main.css
+++ b/libraries/main/css/main.css
@@ -64,7 +64,7 @@ body,html{
     }
 
     .navbar-inverse .navbar-nav .open .dropdown-menu>li>a {
-      color: #777;
+      color: #FFF;
     }
 
     nav.sidebar{
@@ -154,7 +154,9 @@ body,html{
 }
 
 .odd{
-	
 	background-color: #383838;
+}
+.mi-tbody{
+	color: black;
 }
  
