--- a/assets/grocery_crud/themes/datatables/css/jquery.dataTables.css
+++ b/assets/grocery_crud/themes/datatables/css/jquery.dataTables.css
@@ -17,7 +17,7 @@ table.dataTable thead th {
 }
 
 table.dataTable tfoot th {
-	padding: 3px 18px 3px 10px;
+	padding: 5px;
 	border-top: 1px solid black;
 	font-weight: bold;
 }
