--- a/libraries/plantilla/css/bootstrap.css
+++ b/libraries/plantilla/css/bootstrap.css
@@ -2246,7 +2246,8 @@ textarea.input-lg {
 
 @media (min-width: 768px) {
   .form-horizontal .control-label {
-    text-align: right;
+  	/*text-align: right;*/
+    text-align: left;
   }
 }
 
