--- a/libraries/bootstrap/css/bootstrap.css
+++ b/libraries/bootstrap/css/bootstrap.css
@@ -2982,7 +2982,8 @@ select[multiple].input-lg {
 }
 @media (min-width: 768px) {
   .form-horizontal .control-label {
-    text-align: right;
+    /*text-align: right;*/
+    text-align: left;
     margin-bottom: 0;
     padding-top: 9px;
   }
