--- a/libraries/main/css/main.css
+++ b/libraries/main/css/main.css
@@ -350,14 +350,14 @@ input#cantidad{
 
 .img-perfil
 {
-	width: 150px; 
-	height: 150px !important;
+	width: 180px; 
+	height: 180px !important;
 }
 
 .img-perfil-sm
 {
-	width: 100px; 
-	height: 100px !important;
+	width: 150px; 
+	height: 150px !important;
 }
 
 .img_div
@@ -375,4 +375,50 @@ input#cantidad{
 .btn-mover-fotos{
 	margin-top: 15px; 
 	width: 30px
+}
+
+.editable{
+	padding: 0 !important;
+	cursor: text !important;
+	border: transparent !important;
+    background-color: transparent !important;
+    width: auto !important;
+    font-size: 13px !important;
+}
+
+input.web{
+	text-decoration: underline;
+	color: #3c8dbc;
+	width: 100px;
+}
+
+input.web:hover{
+	text-decoration: none;
+	color: #72afd2;
+	cursor: pointer !important;
+}
+.padtop{
+	padding-top: 2% !important;
+	height: 51px;
+}
+
+.btn-file {
+    position: relative;
+    overflow: hidden;
+    margin-top: 15px;
+}
+.btn-file input[type=file] {
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-width: 100%;
+    min-height: 100%;
+    font-size: 100px;
+    text-align: right;
+    filter: alpha(opacity=0);
+    opacity: 0;
+    outline: none;
+    background: white;
+    cursor: inherit;
+    display: block;
 }
