--- a/libraries/main/css/main.css
+++ b/libraries/main/css/main.css
@@ -386,6 +386,13 @@ input#cantidad{
     font-size: 13px !important;
 }
 
+.editable2{
+	border: transparent !important;
+    background-color: transparent !important;
+    width: auto !important;
+    font-size: 13px !important;
+}
+
 input.web{
 	text-decoration: underline;
 	color: #3c8dbc;
@@ -432,4 +439,14 @@ input.web:hover{
 }
 .img-bookblock{
 	height: 300px !important;
+}
+
+.vistaprevia{
+	margin-top: 10px;
+	width: 100%;
+	height: 400px;
+}
+
+.text-center{
+	text-align: center;
 }
